--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -54,6 +54,16 @@ jobs:
       - name: Build application
         run: pnpm build
 
+      - name: Verify standalone build
+        run: |
+          if [ ! -d ".next/standalone" ]; then
+            echo "❌ Error: .next/standalone folder not found!"
+            echo "Build output:"
+            ls -la .next/
+            exit 1
+          fi
+          echo "✅ Standalone build verified"
+
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
@@ -62,6 +72,7 @@ jobs:
             .next/standalone
             .next/static
             public
+          if-no-files-found: error
           retention-days: 1
 
   # JOB 2: E2E Testing
@@ -141,9 +152,21 @@ jobs:
 
       - name: Prepare artifacts structure
         run: |
-          mkdir -p .next-prebuilt/.next
-          mv .next-prebuilt/standalone .next-prebuilt/.next/standalone
-          mv .next-prebuilt/static .next-prebuilt/.next/static
+          echo "📁 Downloaded artifacts structure:"
+          ls -laR .next-prebuilt/ | head -50
+
+          # The upload preserves .next folder structure, so standalone is at .next-prebuilt/.next/standalone
+          if [ -d ".next-prebuilt/.next/standalone" ]; then
+            echo "✅ Using nested structure (.next-prebuilt/.next/standalone)"
+          elif [ -d ".next-prebuilt/standalone" ]; then
+            echo "✅ Using flat structure (.next-prebuilt/standalone)"
+            mkdir -p .next-prebuilt/.next
+            mv .next-prebuilt/standalone .next-prebuilt/.next/standalone
+            mv .next-prebuilt/static .next-prebuilt/.next/static
+          else
+            echo "❌ Error: standalone folder not found in artifacts!"
+            exit 1
+          fi
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
